--- a/src/routes/nav/nav.styles.scss
+++ b/src/routes/nav/nav.styles.scss
@@ -3,11 +3,31 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 0 100px;
+  //   padding: 0 100px;
+
+  .social-medias-container,
+  .nav-links {
+    flex: 1;
+    gap: 40px;
+    display: inline-flex;
+    font-size: 21px;
+    font-family: Fredoka, Helvetica, sans-serif;
+  }
 
   .logo {
-    height: 100%;
-    width: 125px;
-    padding: 10px;
+    // height: 100%;
+    // width: 125px;
+    // padding: 10px;
+    height: 110px;
+    display: block;
+  }
+
+  .nav-links {
+    justify-content: flex-end;
+  }
+
+  .active {
+    color: #663D90;
+    font-weight: 600;
   }
 }
