--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  padding: 20px 100px;
+  padding: 20px 100px 0;
   color: #282828;
   font-family: 'Josefin Sans', Arial, sans-serif;
 }
@@ -11,4 +11,10 @@ body {
 a {
   text-decoration: none;
   color: #282828;
+}
+
+@media screen and (max-width: 1000px) {
+  body {
+    padding: 20px 50px 0;
+  }
 }
