--- a/src/components/button/buttons.styles.scss
+++ b/src/components/button/buttons.styles.scss
@@ -1,9 +1,10 @@
 button {
     display: block;
+    min-width: 130px;
     font-family: "Fredoka", Helvetica, sans-serif;
-    padding: 15px 25px;
+    padding: 12px 25px;
     background-color: #663D90;
-    font-size: 20px;
+    font-size: 16px;
     color: white;
     border-radius: 15px;
     border: unset;
