--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -56,7 +56,7 @@
     font-family: "Amiri", Times, serif;
     font-size: 24px;
     font-weight: 100;
-    margin-bottom: 0;
+    margin-top: 0;
   }
 
   .person-container {
@@ -102,11 +102,25 @@
   margin-left: auto;
 }
 
+.section-header {
+  font-family: 'Amiri';
+  font-size: 40px;
+  margin-bottom: 0;
+  font-weight: 100;
+}
 
 .contact-form-home-container {
   text-align: center;
+  padding: 50px 0;
 
   .go-to-contact-btn {
-    margin: auto;
+    margin: 50px auto 0;
   }
+}
+
+.home-footer {
+  display: block;
+  text-align: center;
+  padding: 20px 0;
+  background-color: rgba(102, 61, 144, 0.2);
 }
