--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
 }
 
 body {
-  padding: 20px 100px 0;
+  // padding: 20px 100px 0;
+  padding-top: 20px;
   color: #282828;
   font-family: 'Josefin Sans', Arial, sans-serif;
 }
@@ -16,5 +17,31 @@ a {
 @media screen and (max-width: 1000px) {
   body {
     padding: 20px 50px 0;
+  }
+}
+
+
+.section-header {
+  font-family: "Amiri";
+  font-size: 40px;
+  margin-bottom: 0;
+  font-weight: 100;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+ 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: #663d90;
+
+  &:hover {
+    cursor: pointer;
   }
 }
