--- a/src/routes/nav/nav.styles.scss
+++ b/src/routes/nav/nav.styles.scss
@@ -3,7 +3,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  //   padding: 0 100px;
+  padding: 0 100px;
 
   .social-medias-container,
   .nav-links {
