--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -53,3 +53,25 @@ $main-color: black;
     }
   }
 }
+
+@media screen and (max-width: 700px) {
+  .group {
+    margin: 30px 0;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .group {
+    margin: 25px 0;
+
+    .form-input {
+      font-size: 14px;
+      height: 45px;
+    }
+
+    .form-input-label {
+      font-size: 13px;
+      top: 17px;
+    }
+  }
+}
