--- a/src/routes/contact/contact.styles.scss
+++ b/src/routes/contact/contact.styles.scss
@@ -2,7 +2,7 @@
     width: 60%;
     margin: auto;
     max-width: 600px;
-    padding-top: 70px;
+    padding: 70px 0 30px;
 
     .contact-page-header {
         text-align: center;
@@ -10,5 +10,24 @@
 
     .message-me-btn {
         margin: auto;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .contact-page-container {
+        padding-top: 40px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .contact-page-container {
+        padding: 20px 0;
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .contact-page-container {
+        width: 90%;
     }
 }
