--- a/src/components/button/buttons.styles.scss
+++ b/src/components/button/buttons.styles.scss
@@ -1,22 +1,155 @@
+// button {
+//   display: block;
+//   min-width: 130px;
+//   font-family: "Fredoka", Helvetica, sans-serif;
+//   padding: 12px 25px;
+//   background-color: #663d90;
+//   font-size: 16px;
+//   color: white;
+//   border-radius: 15px;
+//   border: unset;
+//   transition: all 0.2s ease-in;
+//   cursor: pointer;
+
+//   &:hover {
+//     background-color: #9f6faa;
+//   }
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: inset 0 0 0 2em var(adjust-hue(#663d90, 45deg));
+//   }
+// }
+
+
+
+
+
+
+// HOVER EFFECT TWO
+
+// button {
+//   position: relative;
+//   border: none;
+//   font-size: 18px;
+//   transition: color 0.5s, transform 0.2s, background-color 0.2s;
+//   outline: none;
+//   border-radius: 3px;
+//   margin: 0 10px;
+//   padding: 23px 33px;
+//   border: 3px solid transparent;
+  
+//   &:active {
+//     transform: translateY(3px);
+//   }
+  
+//   &::after, &::before {
+//     border-radius: 3px;
+//   }
+// }
+
+// .btn-container {
+//   min-width: 130px;
+//   height: 50px;
+// }
+
+// $offwhite: darken(white, 10%);
+// $darkblue: rgb(50,50,60);
+
+// .material-bubble {
+//   background-color: transparent;
+//   color: darken($darkblue, 10%);
+//   border: none;
+//   overflow: hidden;
+//   box-shadow: none;
+  
+//   &:hover {
+//     color: $offwhite;
+//   }
+  
+//   &::before {
+//     content: "";
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     border: 3px solid darken($darkblue, 10%);
+//     transition: opacity 0.3s, border 0.3s;
+//   }
+
+//   &:hover::before {
+//     opacity: 0;
+//   }
+  
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 200px;
+//     height: 200px;
+//     background-color: lighten($darkblue, 10%);
+//     border-color: transparent;
+//     border-radius: 50%;
+//     transform: translate(-10px, -70px) scale(0.1);
+//     opacity: 0;
+//     z-index: -1;
+//     transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+//   }
+
+//   &:hover::after {
+//     opacity: 1;
+//     transform-origin: 100px 100px;
+//     transform: scale(1) translate(-10px, -70px);
+//   }
+
+// }
+
+
 button {
-  display: block;
-  min-width: 130px;
-  font-family: "Fredoka", Helvetica, sans-serif;
-  padding: 12px 25px;
-  background-color: #663d90;
-  font-size: 16px;
-  color: white;
-  border-radius: 15px;
-  border: unset;
-  transition: all 0.2s ease-in;
-  cursor: pointer;
+  
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 250px;
+    cursor: pointer;
+}
 
-  &:hover {
-    background-color: #9f6faa;
-  }
-
-  &:hover,
-  &:focus {
-    box-shadow: inset 0 0 0 2em var(adjust-hue(#663d90, 45deg));
-  }
+.btn-three {
+  color: #FFF;
+  transition: all 0.5s;
+  position: relative;
+}
+.btn-three::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(255,255,255,0.1);
+  transition: all 0.3s;
+}
+.btn-three:hover::before {
+  opacity: 0 ;
+  transform: scale(0.5,0.5);
+}
+.btn-three::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(255,255,255,0.5);
+  transform: scale(1.2,1.2);
+}
+.btn-three:hover::after {
+  opacity: 1;
+  transform: scale(1,1);
 }
