--- a/src/components/form-datepicker/form-datepicker.styles.scss
+++ b/src/components/form-datepicker/form-datepicker.styles.scss
@@ -1,126 +1,27 @@
-.date-input {
-  background: none;
-  color: grey;
-  font-size: 18px;
-  padding: 10px 10px 10px 20px;
-  display: block;
-  width: 100%;
-  height: 55px;
-  border-radius: 15px;
-  border: 1px solid grey;
-  margin: 25px 0;
-  text-align: right;
-
-  &:focus {
-    outline: none;
-  }
-}
-
-:root {
-  --input-padding-x: 0.75rem;
-  --input-padding-y: 0.7rem;
-}
-
-.form-label-group {
+.date-group {
   position: relative;
-  align-items: center;
-  justify-content: center;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
 
-.form-label-group > input,
-.form-label-group > label {
-  padding: var(--input-padding-y) var(--input-padding-x);
-}
+  .date-form-input {
+    background: none;
+    color: grey;
+    font-size: 18px;
+    padding: 10px 10px 10px 20px;
+    display: block;
+    width: 100%;
+    height: 55px;
+    border-radius: 15px;
+    border: 1px solid grey;
+    margin: 25px 0;
+  }
 
-.form-label-group > label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  height: 40px;
-  width: 265px;
-  margin-bottom: 0; /* Override default `<label>` margin */
-  line-height: 1.5;
-  color: #8e8e8e;
-  border: 1px solid transparent;
-  border-radius: 2px;
-  transition: all 0.1s ease-in-out;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-  font-size: 12px;
-  background-color: transparent;
-}
-
-.form-label-group input::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input:-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-ms-input-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::-moz-placeholder {
-  color: transparent;
-}
-
-.form-label-group input::placeholder {
-  color: transparent;
-}
-
-.form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-  padding-bottom: calc(var(--input-padding-y) / 3);
-}
-
-.form-label-group input:not(:placeholder-shown) ~ label {
-  padding-top: calc(var(--input-padding-y) / 3);
-  padding-bottom: calc(var(--input-padding-y) / 3);
-  font-size: 10px;
-}
-
-.form-control:focus {
-  border-color: #a8a8a8;
-  outline: none;
-}
-
-.form-control {
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  width: 265px;
-  border-radius: 2px;
-  display: flex;
-  flex-direction: column;
-  background-color: #fafafa;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #dbdbdb;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  cursor: text;
-}
-
-.full {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  height: 80px;
-  font-size: 11px;
-  font-weight: normal;
-  text-decoration: none;
-  text-align: center;
-  width: 265px;
-  color: #8e8e8e;
+  .date-label {
+    position: absolute;
+    top: -4px;
+    font-size: 12px;
+    background: white;
+    padding: 0 10px;
+    color: black;
+    pointer-events: none;
+    left: 35px;
+  }
 }
