--- a/src/routes/about/about.styles.scss
+++ b/src/routes/about/about.styles.scss
@@ -12,9 +12,9 @@
         padding-right: 30px;
     }
 
-    .pic {
-        width: 40%;
-        background-color: aqua;
+    .profile-img {
+        width: 30%;
+        border-radius: 15px;
     }
 }
 
