--- a/src/components/form-datepicker/form-datepicker.styles.scss
+++ b/src/components/form-datepicker/form-datepicker.styles.scss
@@ -4,7 +4,7 @@
   .date-form-input {
     background: none;
     color: grey;
-    font-size: 18px;
+    font-size: 1.1em;
     padding: 10px 10px 10px 20px;
     display: block;
     width: 100%;
@@ -23,7 +23,7 @@
   .date-label {
     position: absolute;
     top: -4px;
-    font-size: 12px;
+    font-size: 0.7em;
     background: white;
     padding: 0 10px;
     color: black;
