--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -3,7 +3,7 @@ $main-color: black;
 
 @mixin shrinkLabel {
   top: -4px;
-  font-size: 12px;
+  font-size: 0.7em;
   background: white;
   padding: 0 10px;
   color: $main-color;
@@ -16,7 +16,7 @@ $main-color: black;
   .form-input {
     background: none;
     color: $sub-color;
-    font-size: 18px;
+    font-size: 1.1em;
     padding: 10px 10px 10px 20px;
     display: block;
     width: 100%;
@@ -42,7 +42,7 @@ $main-color: black;
 
   .form-input-label {
     color: $sub-color;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
@@ -67,12 +67,12 @@ $main-color: black;
     margin: 25px 0;
 
     .form-input {
-      font-size: 14px;
+      font-size: 0.87em;
       height: 45px;
     }
 
     .form-input-label {
-      font-size: 13px;
+      font-size: 0.8em;
       top: 17px;
     }
   }
