--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -33,7 +33,7 @@
         height: 25px;
         border-radius: 50%;
         text-align: center;
-        font-size: 14px;
+        font-size: 0.87em;
         font-weight: 700;
         right: 0;
         top: -30px;
@@ -58,7 +58,7 @@
                 height: 50px;
                 text-align: center;
                 margin: auto;
-                font-size: 30px;
+                font-size: 1.87em;
                 font-weight: 800;
                 color: white;
                 pointer-events: none;
