--- a/src/components/side-modal/side-modal.styles.scss
+++ b/src/components/side-modal/side-modal.styles.scss
@@ -43,7 +43,7 @@
     flex-direction: column;
     gap: 20px;
     align-items: center;
-    font-size: 16px;
+    font-size: 1em;
     font-family: Fredoka, Helvetica, sans-serif;
   }
 }
