--- a/src/routes/nav/nav.styles.scss
+++ b/src/routes/nav/nav.styles.scss
@@ -15,7 +15,7 @@
     flex: 1;
     gap: 40px;
     display: inline-flex;
-    font-size: 16px;
+    font-size: 1em;
     font-family: Fredoka, Helvetica, sans-serif;
   }
 
@@ -65,7 +65,7 @@
   .nav-bar {
     .social-medias-container,
     .nav-links {
-      font-size: 14px;
+      font-size: 0.87em;
     }
 
     .logo {
