--- a/src/routes/services/services.styles.scss
+++ b/src/routes/services/services.styles.scss
@@ -5,15 +5,83 @@
 }
 
 .service-box-container {
-    display: inline-flex;
-    align-items: center;
-    width: 100%;
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 40px;
+  padding: 20px;
+  border-radius: 15px;
+  transition: all 0.3s ease !important;
+
+  .service-img {
+    height: 270px;
+  }
+
+  .mr {
+    margin-right: 40px;
+  }
+
+  .ml {
+    margin-left: 40px;
+  }
+
+  .side-container {
+    width: 60%;
+    text-align: justify;
+    pointer-events: none;
+
+    .header-right {
+      text-align: right;
+    }
+
+    .service-description li {
+      display: table-row;
+      
+      &::before {
+        display: table-cell;
+        text-align: right;
+        content: "+";
+        font-size: 1em;
+        font-weight: bold;
+        color: #ff404c;
+        padding-right: 12px;
+      }
+    }
+  }
+
+  &:hover {
+    background: rgb(159, 111, 170, 0.5);
+    background: linear-gradient(
+      90deg,
+      rgba(159, 111, 170, 0.5) 0%,
+      rgba(102, 61, 144, 0.5) 100%
+    );
+    color: white;
+    // transform: scale(1.1);
+    scale: 1.04;
+  }
 }
+
+// .sbc-right:hover {
+//   -webkit-box-shadow: 8px 10px 9px -10px rgb(102 61 144);
+//   -moz-box-shadow: 8px 10px 9px -10px rgb(102 61 144);
+//   box-shadow: 8px 10px 9px -10px rgb(102 61 144);
+// }
+
+// .sbc-left:hover {
+//   -webkit-box-shadow: -8px 10px 9px -10px rgb(102 61 144);
+//   -moz-box-shadow: -8px 10px 9px -10px rgb(102 61 144);
+//   box-shadow: -8px 10px 9px -10px rgb(102 61 144);
+// }
 
 .left-container {
-    margin-left: auto;
+  margin-left: auto;
 }
 
-.service-illustration {
-  width: 200px;
-}
+// .service-illustration {
+//   height: 270px;
+
+//   g {
+//     height: 100%;
+//   }
+// }
