--- a/src/components/side-modal/side-modal.styles.scss
+++ b/src/components/side-modal/side-modal.styles.scss
@@ -37,6 +37,21 @@
   transform: translateX(200px);
   transition: all 0.3s ease-in-out;
 
+  .close-x-btn {
+    position: absolute;
+    border: 2px solid aliceblue;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 0.87em;
+    font-weight: 700;
+    left: -30px;
+    top: 10px;
+    cursor: pointer;
+    color: aliceblue;
+  }
+
   .side-nav-links,
   .side-social-links {
     display: flex;
