--- a/src/routes/about/about.styles.scss
+++ b/src/routes/about/about.styles.scss
@@ -5,13 +5,13 @@
 }
 
 .doula-p {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .doula-list {
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 30px;
   flex-wrap: wrap;
 
@@ -20,49 +20,46 @@
     cursor: pointer;
 
     .list-element-content {
-        width: 200px;
-        height: 250px;
-        background: #fff;
-        padding: 20px 10px;
-        text-align: center;
-        position: relative;
+      width: 200px;
+      height: 250px;
+      background: #fff;
+      padding: 20px 10px;
+      text-align: center;
+      position: relative;
+      border-radius: 15px;
+      -webkit-box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
+      box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
+      border-top-left-radius: 45px;
+      pointer-events: none;
+      margin-bottom: 60px;
+
+      .list-title {
+        font-weight: 700;
+        color: rgb(102 61 144);
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 40px;
+        height: 100%;
+        width: calc(100% + 16px);
+        left: -8px;
+        z-index: -1;
+        background: rgb(159, 111, 170, 0.5);
+        background: linear-gradient(
+          90deg,
+          rgba(159, 111, 170, 0.5) 0%,
+          rgba(102, 61, 144, 0.5) 100%
+        );
         border-radius: 15px;
-        -webkit-box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
-        box-shadow: -2px 1px 6px -2px rgba(0, 0, 0, 0.75);
-        border-top-left-radius: 45px;
-        pointer-events: none;
-        margin-bottom: 60px;
-       
-    
-        .list-title {
-          font-weight: 700;
-          color: rgb(102 61 144);
-        }
-    
-        &::after {
-          content: "";
-          position: absolute;
-          top: 40px;
-          height: 100%;
-          width: calc(100% + 16px);
-          left: -8px;
-          z-index: -1;
-          background: rgb(159, 111, 170, 0.5);
-          background: linear-gradient(
-            90deg,
-            rgba(159, 111, 170, 0.5) 0%,
-            rgba(102, 61, 144, 0.5) 100%
-          );
-          border-radius: 15px;
-          border-bottom-right-radius: 45px;
-        }
+        border-bottom-right-radius: 45px;
+      }
     }
 
-      
-
     &:hover {
-        transform: translateY(-10px);
+      transform: translateY(-10px);
     }
   }
 }
@@ -70,7 +67,7 @@
 .about-container {
   display: flex;
   width: 75%;
-//   max-width: 1000px;
+  //   max-width: 1000px;
   margin: auto;
 
   .about-text {
@@ -78,7 +75,8 @@
   }
 
   .profile-img {
-    width: 30%;
+    width: 300px;
+    height: 450px;
     border-radius: 15px;
   }
 }
@@ -96,13 +94,39 @@
   border-top-right-radius: 15px;
 }
 
+@media screen and (max-width: 1200px) {
+  .about-container {
+    width: 90%;
+  }
+}
 
-// @keyframes bounce-5 {
-//     0%   { transform: scale(1,1)    translateY(0); }
-//     10%  { transform: scale(1.1,.9) translateY(0); }
-//     30%  { transform: scale(.9,1.1) translateY(-100px); }
-//     50%  { transform: scale(1,1)    translateY(0); }
-//     57%  { transform: scale(1,1)    translateY(-7px); }
-//     64%  { transform: scale(1,1)    translateY(0); }
-//     100% { transform: scale(1,1)    translateY(0); }
-// }
+@media screen and (max-width: 830px) {
+  .about-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .about-container {
+    flex-direction: column;
+
+    .about-text {
+      padding: 0;
+    }
+
+    .profile-img {
+      margin: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .doula-list li .list-element-content {
+    width: 155px;
+    height: 235px;
+
+    p {
+      font-size: 0.8em;
+    }
+  }
+}
