Adapted code for WCAG standards

--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -30,6 +30,7 @@
     border: 2px solid aliceblue;
     width: 25px;
     height: 25px;
+    line-height: 25px;
     border-radius: 50%;
     text-align: center;
     font-size: 0.87em;
