--- a/src/routes/about/about.styles.scss
+++ b/src/routes/about/about.styles.scss
@@ -35,6 +35,7 @@
       margin-bottom: 60px;
 
       .list-title {
+        font-size: 1.05em;
         font-weight: 700;
         color: rgb(102 61 144);
       }
