small change on not found

--- a/src/routes/not-found/not-found.styles.scss
+++ b/src/routes/not-found/not-found.styles.scss
@@ -1,6 +1,7 @@
 .not-found-page {
     padding-top: 50px;
     width: 100%;
+    text-align: center;
     
     .not-found-img {
         width: 50%;
