--- a/src/routes/about/about.styles.scss
+++ b/src/routes/about/about.styles.scss
@@ -68,18 +68,30 @@
 .about-container {
   display: flex;
   width: 75%;
-  //   max-width: 1000px;
   margin: auto;
 
   .about-text {
     padding-right: 30px;
   }
 
-  .profile-img {
-    width: 300px;
-    height: 450px;
-    border-radius: 15px;
+  .profile-img-container {
+    text-align: center;
+
+    .profile-img {
+      width: 300px;
+      height: 450px;
+      border-radius: 15px;
+    }
+
+    .image-credit {
+      font-size: 0.75em;
+
+      .image-credit-link:hover {
+        text-decoration: underline;
+      }
+    }
   }
+
 }
 
 .philosophy-and-mission-container {
