--- a/src/routes/nav/nav.styles.scss
+++ b/src/routes/nav/nav.styles.scss
@@ -3,6 +3,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
+  background-color: rgba(102, 61, 144, 0.2);
 
   .hide-content {
     visibility: hidden;
@@ -38,6 +39,16 @@
 
   .show-btn {
     display: block;
+  }
+}
+
+.social-media-icon {
+  height: 25px;
+  width: min-content;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: translateY(-4px);
   }
 }
 
