--- a/src/App.scss
+++ b/src/App.scss
@@ -1,163 +1,178 @@
-*, *::before, *::after {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 body {
-  color: #282828;
-  font-family: 'Josefin Sans', Arial, sans-serif;
-  overflow-x: hidden;
+	color: #282828;
+	font-family: "Josefin Sans", Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 #root {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 a {
-  text-decoration: none;
-  color: #282828;
+	text-decoration: none;
+	color: #282828;
 }
 
 ul {
-  list-style-type: none;
-  padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
 
 .section-header {
-  font-family: "Amiri";
-  font-size: 2.5em;
-  margin-bottom: 0;
-  font-weight: 100;
+	font-family: "Amiri";
+	font-size: 2.5em;
+	margin-bottom: 0;
+	font-weight: 100;
 }
 
-.pad70{
-  padding: 70px 250px;
+.pad70 {
+	padding: 70px 250px;
 }
 
 .pad50 {
-  padding: 50px 250px;
+	padding: 50px 250px;
 }
 
 .pad0 {
-  padding: 0 250px;
+	padding: 0 250px;
 }
 
 .pad-nav {
-  padding: 10px 250px;
+	padding: 10px 250px;
 }
 
 .mbd-p {
-  font-size: 1.1em;
-  line-height: 1.3em;
-  text-align: justify;
+	font-size: 1.1em;
+	line-height: 1.3em;
+	text-align: justify;
 }
 
 .active {
-  color: #663d90;
-  font-weight: 600;
+	color: #663d90;
+	font-weight: 600;
+}
+
+.social-media-icon {
+	height: 25px;
+	width: 25px;
+	transition: all 0.3s ease;
+
+	&:hover {
+		transform: translateY(-4px);
+	}
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
+	width: 7px;
 }
- 
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
- 
-::-webkit-scrollbar-thumb {
-  background-color: #663d90;
-  border-radius: 15px;
 
-  &:hover {
-    cursor: pointer;
-  }
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #663d90;
+	border-radius: 15px;
+
+	&:hover {
+		cursor: pointer;
+	}
 }
 
 // Style for removing arrows from number type input
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 @media screen and (max-width: 1630px) {
-  .pad70{
-    padding: 70px 100px;
-  }
-  
-  .pad50 {
-    padding: 50px 100px;
-  }
-  
-  .pad0 {
-    padding: 0 100px;
-  }
+	.pad70 {
+		padding: 70px 100px;
+	}
 
- .pad-nav {
-    padding: 10px 100px;
-  }
+	.pad50 {
+		padding: 50px 100px;
+	}
+
+	.pad0 {
+		padding: 0 100px;
+	}
+
+	.pad-nav {
+		padding: 10px 100px;
+	}
 }
 
 @media screen and (max-width: 1000px) {
-  .pad70, .pad50 {
-    padding: 50px;
-  }
+	.pad70,
+	.pad50 {
+		padding: 50px;
+	}
 
-  .pad0 {
-    padding: 0 50px;
-  }
+	.pad0 {
+		padding: 0 50px;
+	}
 
-  .pad-nav {
-    padding: 10px 50px;
-  }
+	.pad-nav {
+		padding: 10px 50px;
+	}
 
-  .section-header {
-    font-size: 2.18em;
-  }
+	.section-header {
+		font-size: 2.18em;
+	}
 }
 
 @media screen and (max-width: 790px) {
-  .section-header {
-    font-size: 2em;
-  }
+	.section-header {
+		font-size: 2em;
+	}
 
-  .mbd-p {
-    font-size: 1em;
-  }
+	.mbd-p {
+		font-size: 1em;
+	}
 }
 
 @media screen and (max-width: 690px) {
-  .pad70, .pad50 {
-    padding: 30px;
-  }
+	.pad70,
+	.pad50 {
+		padding: 30px;
+	}
 
-  .pad0 {
-    padding: 0 30px;
-  }
+	.pad0 {
+		padding: 0 30px;
+	}
 
-  .pad-nav {
-    padding: 10px 30px;
-  }
+	.pad-nav {
+		padding: 10px 30px;
+	}
 
-  .section-header {
-    font-size: 1.87em;
-  }
+	.section-header {
+		font-size: 1.87em;
+	}
 }
 
 @media screen and (max-width: 450px) {
-  .pad70, .pad50 {
-    padding: 30px 15px;
-  }
+	.pad70,
+	.pad50 {
+		padding: 30px 15px;
+	}
 
-  .pad0 {
-    padding: 0 15px;
-  }
+	.pad0 {
+		padding: 0 15px;
+	}
 
-  .pad-nav {
-    padding: 10px 15px;
-  }
+	.pad-nav {
+		padding: 10px 15px;
+	}
 
-  .section-header {
-    text-align: center;
-  }
+	.section-header {
+		text-align: center;
+	}
 }
